<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar_ly"
            layout="@layout/toolbar_ly"
            tools:viewBindingIgnore="true" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/form_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                tools:context=".ui.registration.RegistrationFragment">


                <in.rajpusht.pc.custom.ui.FormSegmentedGroupElement
                    android:id="@+id/benf_child_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_label="@string/no_of_children"
                    app:ff_required="true"
                    app:ff_selections="@array/child_count" />

                <in.rajpusht.pc.custom.ui.FormSegmentedGroupElement
                    android:id="@+id/benf_child_twin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_label="@string/are_you_having_Twin"
                    app:ff_required="true"
                    tools:visibility="visible"
                    android:visibility="gone"
                    app:ff_selections="@array/YES_NO" />


                <in.rajpusht.pc.custom.ui.FormSingleSelectorElement
                    android:id="@+id/benf_reg_stage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_label="@string/are_you"
                    app:ff_required="true"
                    app:ff_selections="@array/benf_currently" />

                <LinearLayout
                    android:id="@+id/first_child_ly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp">

                    <TextView
                        android:id="@+id/benf_child1_tv"
                        style="@style/FormTextMini"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first_child"
                        android:gravity="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="19sp" />

                    <in.rajpusht.pc.custom.ui.FormDatePickerElement
                        android:id="@+id/benf_child_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ff_hint="@string/DOB"
                        app:ff_input_type="number"
                        app:ff_label="@string/child_age"
                        app:ff_required="true" />

                    <in.rajpusht.pc.custom.ui.FormSingleSelectorElement
                        android:id="@+id/benf_child_delivery_place_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ff_label="@string/delivery"
                        app:ff_required="true"
                        app:ff_selections="@array/benf_delivery_place" />


                    <in.rajpusht.pc.custom.ui.FormEditFieldElement
                        android:id="@+id/benf_child_delivery_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ff_hint="@string/place_name"
                        app:ff_label="@string/institutional_delivery"
                        app:ff_maxLength="130"
                        app:ff_show_divider="false"
                        app:ff_required="true" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/view2" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/second_child_ly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp">

                    <TextView
                        android:gravity="center"
                        android:id="@+id/benf_child2_tv"
                        style="@style/FormTextMini"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/second_child"
                        android:textColor="@color/colorAccent"
                        android:textSize="19sp" />

                    <in.rajpusht.pc.custom.ui.FormDatePickerElement
                        android:id="@+id/benf_child2_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ff_hint="@string/DOB"
                        app:ff_input_type="number"
                        app:ff_label="@string/child_age"
                        app:ff_required="true" />

                    <in.rajpusht.pc.custom.ui.FormSingleSelectorElement
                        android:id="@+id/benf_child2_delivery_place_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ff_label="@string/delivery"
                        app:ff_required="true"
                        app:ff_selections="@array/benf_delivery_place" />


                    <in.rajpusht.pc.custom.ui.FormEditFieldElement
                        android:id="@+id/benf_child2_delivery_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ff_hint="@string/place_name"
                        app:ff_label="@string/institutional_delivery"
                        app:ff_maxLength="130"
                        app:ff_show_divider="false"
                        app:ff_required="true" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/view2" />

                </LinearLayout>


                <in.rajpusht.pc.custom.ui.FormMultiSelectorElement
                    android:id="@+id/benf_registered_programme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_chbox_none_pos="4"
                    app:ff_label="@string/register_in"
                    app:ff_required="true"
                    app:ff_selections="@array/benf_registered_in" />


                <TextView
                    android:id="@+id/benf_instal_ly"
                    style="@style/FormTextMini"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/number_installment_received"
                    android:visibility="gone" />

                <in.rajpusht.pc.custom.ui.FormSingleSelectorElement
                    android:id="@+id/benf_pmmvvy_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    app:ff_label="@string/pmmvvy"
                    app:ff_label_text_appearance="@style/FormTextSmall"
                    app:ff_required="true"
                    app:ff_selections="@array/count_0_3_dot"
                    app:ff_show_divider="false" />


                <in.rajpusht.pc.custom.ui.FormSingleSelectorElement
                    android:id="@+id/benf_igmpy_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    app:ff_label="@string/igmpy"
                    app:ff_label_text_appearance="@style/FormTextSmall"
                    app:ff_required="true"
                    app:ff_selections="@array/count_0_4_dot"
                    app:ff_show_divider="false" />

                <in.rajpusht.pc.custom.ui.FormSingleSelectorElement
                    android:id="@+id/benf_jsy_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    app:ff_label="@string/jsy"
                    app:ff_label_text_appearance="@style/FormTextSmall"
                    app:ff_required="true"
                    app:ff_selections="@array/count_0_1_dot"
                    app:ff_show_divider="false" />

                <in.rajpusht.pc.custom.ui.FormSingleSelectorElement
                    android:id="@+id/benf_rajshri_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    app:ff_label="@string/rajshri"
                    app:ff_label_text_appearance="@style/FormTextSmall"
                    app:ff_required="true"
                    app:ff_selections="@array/count_0_2_more_dot" />


                <in.rajpusht.pc.custom.ui.FormEditFieldElement
                    android:id="@+id/benf_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_hint="@string/beneficiary_name"
                    app:ff_label="@string/name_of_beneficiary"
                    app:ff_maxLength="30"
                    app:ff_required="true" />

                <in.rajpusht.pc.custom.ui.FormEditFieldElement
                    android:id="@+id/benf_hus_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_hint="@string/Name"
                    app:ff_label="@string/benef_husband_name"
                    app:ff_maxLength="30"
                    app:ff_required="true" />

                <in.rajpusht.pc.custom.ui.FormSingleSelectorElement
                    android:id="@+id/benf_age_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_label="@string/benef_age"
                    app:ff_required="true"
                    app:ff_selections="@array/benf_age"
                    app:ff_show_divider="false" />

                <in.rajpusht.pc.custom.ui.FormDatePickerElement
                    android:id="@+id/benf_age_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_hint="@string/benef_dob"
                    app:ff_required="true"
                    app:ff_show_divider="false" />

                <in.rajpusht.pc.custom.ui.FormEditFieldElement
                    android:id="@+id/benf_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_hint="@string/benef_age_enter"
                    app:ff_input_type="number"
                    app:ff_maxLength="2"
                    app:ff_required="true" />


                <in.rajpusht.pc.custom.ui.FormMultiSelectorElement
                    android:id="@+id/benf_mobile_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_input_type="number"
                    app:ff_label="@string/mobile_number"
                    app:ff_required="true"
                    app:ff_selections="@array/benf_sele_mobile"
                    app:ff_show_divider="false" />

                <in.rajpusht.pc.custom.ui.FormEditFieldElement
                    android:id="@+id/benf_self_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_hint="@string/self_mobile"
                    app:ff_input_type="phone_no"
                    app:ff_maxLength="10"
                    app:ff_required="true"
                    app:ff_show_divider="false" />

                <in.rajpusht.pc.custom.ui.FormEditFieldElement
                    android:id="@+id/benf_hus_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_hint="@string/husband_mobile"
                    app:ff_input_type="phone_no"
                    app:ff_maxLength="10"
                    app:ff_required="true" />


                <in.rajpusht.pc.custom.ui.FormSingleSelectorElement
                    android:id="@+id/benf_caste"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_label="@string/caste"
                    app:ff_required="true"
                    app:ff_selections="@array/caste" />

                <in.rajpusht.pc.custom.ui.FormSingleSelectorElement
                    android:id="@+id/benf_econ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_label="@string/economic_status"
                    app:ff_required="true"
                    app:ff_selections="@array/benf_econ" />

                <in.rajpusht.pc.custom.ui.FormEditFieldElement
                    android:id="@+id/benf_pctsid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_hint="@string/PCTS_ID"
                    app:ff_input_type="number"
                    app:ff_label="@string/benef_pcts_id"
                    app:ff_maxLength="15"
                    app:ff_required="true" />

                <in.rajpusht.pc.custom.ui.FormEditFieldElement
                    android:id="@+id/benf_bhamasha_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_hint="@string/bhamashah_ID_ACK"
                    app:ff_input_type="textPersonName"
                    app:ff_label="@string/bahamashah_id"
                    app:ff_maxLength="15"
                    app:ff_required="true" />


                <in.rajpusht.pc.custom.ui.FormDatePickerElement
                    android:id="@+id/benf_lmp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_hint="@string/LMP_date"
                    app:ff_label="@string/benef_lmp_date"
                    app:ff_required="true" />


                <in.rajpusht.pc.custom.ui.FormSingleSelectorElement
                    android:id="@+id/benf_cous_sms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ff_label="@string/receive_counselling"
                    app:ff_required="true"
                    app:ff_selections="@array/benf_mobile_both" />

                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/save" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>