<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="in.rajpusht.pc.ui.forgot_password.ForgotPasswordViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.forgot_password.ForgotPasswordFragment">


        <include
            android:id="@+id/toolbar_ly"
            layout="@layout/toolbar_ly"
            tools:viewBindingIgnore="true" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <in.rajpusht.pc.custom.ui.FormEditFieldElement
                    android:id="@+id/email_tly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:ff_hint="@string/email" />

                <Button
                    android:id="@+id/submit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:onClick="@{() -> viewModel.setOtp(emailTly.getText())}"
                    android:text="@string/submit" />


                <in.rajpusht.pc.custom.ui.FormEditFieldElement
                    android:id="@+id/otp_txtly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    app:ff_hint="@string/OTP"
                    tools:visibility="visible" />

                <in.rajpusht.pc.custom.ui.FormEditFieldElement
                    android:id="@+id/new_password_ly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:visibility="gone"
                    app:ff_hint="@string/New_Password"
                    app:ff_input_type="password"
                    tools:visibility="visible" />

                <in.rajpusht.pc.custom.ui.FormEditFieldElement
                    android:id="@+id/confirm_password_ly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:visibility="gone"
                    app:ff_hint="@string/Confirm_New_Password"
                    app:ff_input_type="password"
                    tools:visibility="visible" />


                <Button
                    android:id="@+id/submit_password_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:onClick="@{() -> viewModel.setPassword(otpTxtly.getText(),newPasswordLy.getText(),confirmPasswordLy.getText())}"
                    android:text="@string/set_new_password"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>